--- a/css/style.css
+++ b/css/style.css
@@ -586,16 +586,15 @@ a:active {
 @media (max-width: 500px) {
 
     body {
-        max-width: 360px;
-        min-width: 200px;
+        /* max-width: 360px; */
+        /* min-width: 200px; */
         height: 1277px;
         margin: 0 auto;
-        font-family: Gotham Pro;
         padding: 0;
     }
 
     #mainContainer {
-        max-width: 360px;
+        /* max-width: 360px; */
         height: 1277px;
         display: flex;
         flex-wrap: wrap;
